--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: post-index
-title: Latest Posts
+title: 
 description: "Describe this nonsense."
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 image:
-  feature: abstract-1.jpg
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+  feature: Taiga-01.jpg
+  credit: Zephyre
+  creditlink: http://blog.zephyre.me/
 ---
 
 {% for post in paginator.posts %}
